src/components/ui/pagination/pagination.module.scss
.container {
  display: flex;
  gap: 1.5rem;
  align-items: center;
}

.pages {
  display: flex;
  align-items: center;
}

.page {
  all: unset;

  cursor: pointer;

  display: flex;
  align-items: center;
  justify-content: center;

  width: 1.5rem;
  height: 1.5rem;
  margin-right: 0.5rem;
  margin-left: 0.5rem;

  border: 1px solid transparent;
  border-radius: 0.13rem;

  &:focus-visible {
    border: 1px solid var(--color-info-900);
  }

  &:hover {
    background-color: var(--color-dark-500);
  }

  &.disabled {
    pointer-events: none;
    color: var(--color-dark-100);
  }

  &.active {
    color: var(--color-dark-900);
    background-color: var(--color-light-100);
  }
}

.dots {
  pointer-events: none;
  user-select: none;
}

.rowsPerPage {
  display: flex;
  gap: 0.75rem;
  align-items: center;
}

.select {
  padding: 0.01rem 0.77rem !important;
}

